Updated api.yml (updated status)
