# server/common/api.yml
@@ -601,6 +601,38 @@ paths:
           description: Successful added order
         401:
           description: Invalid password or username
+  /order/updatestatus:
+    put:  
+      tags:
+        - Order
+      summary: Update order status
+      description: Update order status
+      parameters:
+        - in: body
+          name: body
+          schema:
+            type: object
+            properties:
+              order_id:
+                type: string
+              status:
+                type: string
+              Textdata:
+                type: string
+              Imagedata:
+                type: array
+                items:
+                  type: string
+
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        200:
+          description: Return the order data
+        404:
+          description: Order not found / Unauthorized
   /order/addcartorder:
     post:
       tags:
